--- a/[E-08]Movielens_recommendation.ipynb
+++ b/[E-08]Movielens_recommendation.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "mechanical-system",
    "metadata": {},
    "source": [
     "# [Exploration 08] Movielens 영화 추천 \n",
@@ -24,7 +23,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "italic-finnish",
    "metadata": {},
    "source": [
     "## 01. load and preprocess data\n",
@@ -33,8 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "proved-editing",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +110,7 @@
        "4        1      2355       5  978824291"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,31 +127,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "lovely-senegal",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'description'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-51-08a9e360f828>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mratings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescription\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/envs/aiffel/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5458\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5459\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5460\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5461\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5462\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'description'"
-     ]
-    }
-   ],
-   "source": [
-    "ratings.description()"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "improving-recording",
    "metadata": {},
    "source": [
     "- 정수로 된 user_id, movie_id, 평점(rating), 재생시간(timestamp)을 확인    \n",
@@ -164,8 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "prime-giant",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +159,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authorized-dialogue",
    "metadata": {},
    "source": [
     "**파일이름(ratings)와 겹치지 않도록 컬럼 *rating*의 이름을 *count*로 바꿉니다.**"
@@ -195,10 +166,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "unknown-kidney",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/aiffel-dj26/anaconda3/envs/aiffel/lib/python3.7/site-packages/pandas/core/frame.py:4446: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  errors=errors,\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -216,7 +197,7 @@
        "Name: count, Length: 836478, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +209,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unlikely-patch",
    "metadata": {},
    "source": [
     "**메타 데이터('movies.dat')으로 영화 제목을 확인합니다.**"
@@ -236,8 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "inside-verification",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +289,7 @@
        "4         5  Father of the Bride Part II (1995)                        Comedy"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +303,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blocked-colony",
    "metadata": {},
    "source": [
     "**ratings 데이터에서 예측한 후, 메타 데이터로 예측한 영화의 제목, 장르를 확인해 모델을 평가할 수 있을 것으로 보입니다.**"
@@ -332,7 +310,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lucky-bruce",
    "metadata": {},
    "source": [
     "## 02. 데이터 파헤치기 \n",
@@ -344,8 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "mathematical-liberty",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +400,7 @@
        "4        1      2355      5  978824291"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,8 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "narrative-volume",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +420,7 @@
        "6039"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,8 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "pursuant-saskatchewan",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +441,7 @@
        "3628"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,8 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "valuable-coral",
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -522,7 +495,7 @@
        "Name: user_id, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +508,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "precious-third",
    "metadata": {},
    "source": [
     "**id로 되어있는 영화들, 영화의 제목을 알아봅시다!**"
@@ -543,8 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "indirect-rotation",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +524,7 @@
        "Int64Index([2858, 260, 1196, 1210, 2028], dtype='int64', name='movie_id')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,47 +536,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "specified-proxy",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'movies_30_title' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-cdadf491fe4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmovies_30\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mmovies_30_title\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmovies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmovies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'movie_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmovies_30_title\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'movies_30_title' is not defined"
+     ]
     }
    ],
    "source": [
@@ -618,7 +561,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confident-campus",
    "metadata": {},
    "source": [
     "**영화와 유저에 대한 통계, 영화 재생 시간에 대한 통계를 내보겠습니다.**"
@@ -626,8 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "matched-slovak",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +585,7 @@
        "Name: movie_id, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,27 +598,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "adapted-direction",
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    6.039000e+03\n",
+       "mean     9.705019e+08\n",
+       "std      8.916703e+06\n",
+       "min      9.567058e+08\n",
+       "25%      9.650976e+08\n",
+       "50%      9.720067e+08\n",
+       "75%      9.748566e+08\n",
+       "max      1.045440e+09\n",
+       "Name: timestamp, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 유저별 play횟수 중앙값에 대한 통계\n",
-    "user_median = data.groupby('user_id')['play'].median()\n",
+    "user_median = ratings.groupby('user_id')['timestamp'].median()\n",
     "user_median.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "separate-audience",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "informed-freeze",
    "metadata": {},
    "source": [
     "## 03. 내가 선호하는 영화를 5가지 골라서 rating에 추가해 줍시다.\n",
@@ -690,7 +647,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "violent-style",
    "metadata": {},
    "source": [
     "# 정리     \n",
