exploration 8. movielens recommendation

--- a/[E-08]Movielens_recommendation.ipynb
+++ b/[E-08]Movielens_recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "standard-quantity",
+   "id": "unlikely-diamond",
    "metadata": {},
    "source": [
     "# [Exploration 08] Movielens 영화 추천 \n",
@@ -10,21 +10,21 @@
     "## 프로젝트 설명 \n",
     "- 추천시스템 실습\n",
     "- Movielens 데이터셋을 사용    \n",
-    "`\n",
+    "```\n",
     "$ wget http://files.grouplens.org/datasets/movielens/ml-1m.zip\n",
-    "`\n",
-    "    - Movielens : 영화에 대한 평점을 매긴 데이터\n",
-    "    - 평점 데이터는 explicit데이터이지만, implicit데이터로 간주하고 테스트 진행 \n",
-    "    - 3점 미만은 비선호로 간주해 데이터셋에서 제외\n",
+    "```\n",
+    "- Movielens : 영화에 대한 평점을 매긴 데이터\n",
+    "- 평점 데이터는 explicit데이터이지만, implicit데이터로 간주하고 테스트 진행 \n",
+    "- 3점 미만은 비선호로 간주해 데이터셋에서 제외\n",
     "- MF모델 사용\n",
     "\n",
     "## 프로젝트 목표\n",
-    "-"
+    "- MF matrix"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fixed-checkout",
+   "id": "completed-laptop",
    "metadata": {},
    "source": [
     "## 01. load and preprocess data\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "stupid-campbell",
+   "id": "related-volunteer",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "joint-samoa",
+   "id": "meaning-convert",
    "metadata": {},
    "source": [
     "**메타 데이터('movies.dat')으로 영화 제목을 확인합니다.**"
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "recent-niagara",
+   "id": "fundamental-liabilities",
    "metadata": {
     "scrolled": true
    },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rental-initial",
+   "id": "criminal-wallace",
    "metadata": {},
    "source": [
     "**ratings, movies의 데이터 갯수가 같은지 확인합니다.**"
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "banned-optics",
+   "id": "facial-guess",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "registered-cosmetic",
+   "id": "derived-large",
    "metadata": {},
    "source": [
     "- **데이터를 다루기 쉽도록 movies와 ratings를 합쳐주도록 하겠습니다.**"
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "nasty-corpus",
+   "id": "tutorial-bathroom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "trained-sessions",
+   "id": "graphic-treaty",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accepting-editor",
+   "id": "thorough-massachusetts",
    "metadata": {},
    "source": [
     "- 정수로 된 user_id, movie_id, 평점(rating), 재생시간(timestamp)을 확인    \n",
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "pressed-stuff",
+   "id": "dramatic-helicopter",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "healthy-currency",
+   "id": "seeing-stand",
    "metadata": {},
    "source": [
     "**파일이름(ratings)와 겹치지 않도록 컬럼 *rating*의 이름을 *count*로 바꿉니다.**"
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "significant-fraud",
+   "id": "contemporary-thread",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "still-catch",
+   "id": "premium-recording",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "endangered-gateway",
+   "id": "genetic-notice",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "completed-sudan",
+   "id": "collect-complex",
    "metadata": {},
    "source": [
     "**ratings 데이터로 학습한 후, 메타 데이터로 예측한 영화의 제목, 장르를 확인해 모델을 평가할 수 있을 것으로 보입니다.**\n",
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "differential-clearing",
+   "id": "owned-contents",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "hungarian-demographic",
+   "id": "bound-tanzania",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "threaded-friendly",
+   "id": "discrete-spelling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "greenhouse-democrat",
+   "id": "processed-savings",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animal-interference",
+   "id": "purple-shelter",
    "metadata": {},
    "source": [
     "## 02. 데이터 파헤치기 \n",
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fatty-specification",
+   "id": "turned-relay",
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "informal-sacramento",
+   "id": "normal-familiar",
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "tough-naples",
+   "id": "radio-lying",
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "powerful-burner",
+   "id": "specific-congress",
    "metadata": {
     "scrolled": true
    },
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "closing-berry",
+   "id": "published-noise",
    "metadata": {},
    "source": [
     "**id로 되어있는 영화들, 영화의 제목을 알아봅시다!**"
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "handled-enclosure",
+   "id": "economic-powell",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "placed-mauritius",
+   "id": "rural-simple",
    "metadata": {},
    "source": [
     "- 순위와 함꼐 뽑기"
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cellular-yellow",
+   "id": "considerable-teach",
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "martial-kenya",
+   "id": "upper-opening",
    "metadata": {},
    "source": [
     "**영화와 유저에 대한 통계, 영화 재생 시간에 대한 통계를 내보겠습니다.**"
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "impressive-crawford",
+   "id": "differential-petroleum",
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "aerial-swimming",
+   "id": "inclusive-transmission",
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "upper-aspect",
+   "id": "mexican-warehouse",
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "funded-mobile",
+   "id": "systematic-intent",
    "metadata": {},
    "source": [
     "## 02. 모델 검증을 위한 데이터 추가\n",
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "beautiful-investor",
+   "id": "large-marks",
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "finnish-compromise",
+   "id": "scientific-biography",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "buried-equivalent",
+   "id": "hydraulic-auction",
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subject-premises",
+   "id": "outstanding-attribute",
    "metadata": {},
    "source": [
     "- 위 방법으로 바꾸려고 했지만, id중복이 되기 때문에 빠진 값으로 바꿔준다. "
@@ -1402,7 +1402,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "exceptional-computer",
+   "id": "fleet-barbados",
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ranging-samuel",
+   "id": "royal-wrapping",
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "silent-leader",
+   "id": "matched-italian",
    "metadata": {},
    "source": [
     "## 03. CSR matrix 만들기 "
@@ -1634,7 +1634,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "associate-maximum",
+   "id": "black-performer",
    "metadata": {
     "scrolled": true
    },
@@ -1663,7 +1663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "final-assault",
+   "id": "attractive-belief",
    "metadata": {},
    "source": [
     "## 04. 모델 학습 \n",
@@ -1673,7 +1673,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "accompanied-behalf",
+   "id": "certain-comparative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1690,7 +1690,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "confused-output",
+   "id": "minimal-captain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "stainless-abortion",
+   "id": "standard-sentence",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "bulgarian-tobago",
+   "id": "enabling-butter",
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stuffed-perry",
+   "id": "confident-german",
    "metadata": {},
    "source": [
     "## 05. 선호하는 영화를 이용해 학습된 모델이 예측한 선호도를 확인하기"
@@ -1759,7 +1759,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "entire-ocean",
+   "id": "linear-combat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1770,7 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "alive-basis",
+   "id": "strange-greensboro",
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1792,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "close-worst",
+   "id": "urban-verse",
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "purple-integral",
+   "id": "american-teacher",
    "metadata": {},
    "source": [
     "- 두 벡터를 곱해 1에 가까운 수가 나올 수록 학습이 잘 된 것이다."
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "australian-equipment",
+   "id": "advisory-accordance",
    "metadata": {
     "scrolled": true
    },
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specific-ozone",
+   "id": "electronic-cemetery",
    "metadata": {},
    "source": [
     "- 너무 낮기 때문에, iteration, factors를 높여보겠다.\n",
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "simple-amino",
+   "id": "unlike-inside",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "loaded-authority",
+   "id": "linear-amino",
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "reserved-airplane",
+   "id": "major-concentration",
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1934,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "critical-sociology",
+   "id": "chief-stereo",
    "metadata": {},
    "outputs": [
     {
@@ -1956,7 +1956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "simple-groove",
+   "id": "substantial-occasion",
    "metadata": {},
    "source": [
     "낮게 나왔다..\n",
@@ -1967,7 +1967,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "intelligent-offering",
+   "id": "iraqi-slovak",
    "metadata": {},
    "outputs": [
     {
@@ -2005,7 +2005,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "saved-luxury",
+   "id": "level-benefit",
    "metadata": {
     "scrolled": true
    },
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bored-bahamas",
+   "id": "alone-champion",
    "metadata": {},
    "source": [
     "**장르를 확인해보니 3가지만 좋아하는 영화의 장르와 같은 장르이다.**\n",
@@ -2076,7 +2076,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "disciplinary-console",
+   "id": "lovely-colorado",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,7 +2090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adequate-seating",
+   "id": "unknown-nelson",
    "metadata": {},
    "source": [
     "## 07. 내가 가장 좋아할 만한 영화들을 추천받아 봅시다.\n",
@@ -2100,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "light-carnival",
+   "id": "unique-killer",
    "metadata": {},
    "outputs": [
     {
@@ -2143,7 +2143,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "found-couple",
+   "id": "caring-hammer",
    "metadata": {},
    "outputs": [
     {
@@ -2183,7 +2183,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "digital-banks",
+   "id": "military-monaco",
    "metadata": {},
    "outputs": [
     {
@@ -2220,7 +2220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "south-making",
+   "id": "dental-arkansas",
    "metadata": {},
    "source": [
     "**뮤지컬, 코미디를 제외하고 다 좋아하는 영화의 장르가 나왔다.**\n",
@@ -2230,7 +2230,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "coordinated-coating",
+   "id": "diagnostic-spelling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2241,7 +2241,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "latin-holocaust",
+   "id": "indonesian-softball",
    "metadata": {
     "scrolled": true
    },
@@ -2282,7 +2282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acceptable-conversion",
+   "id": "electronic-benchmark",
    "metadata": {},
    "source": [
     "**explain에 (영화, 기여도) 가 나와있다.**"
@@ -2291,7 +2291,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "scheduled-reset",
+   "id": "radio-patch",
    "metadata": {},
    "outputs": [
     {
@@ -2316,7 +2316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loose-stopping",
+   "id": "focal-dodge",
    "metadata": {},
    "source": [
     "- 가장 높은 기여도를 가진 'Flying Tigers (1942)'영화를 확인해보니, 장르가 선호하는 영화와 유사하다.\n",
@@ -2325,7 +2325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "partial-disclosure",
+   "id": "finnish-union",
    "metadata": {},
    "source": [
     "# 정리     \n",
